package service

import (
	"context"

	"github.com/ranson21/ranor-common/pkg/database/connection"
)

type AuthService struct {
	db connection.Database
	// Add other dependencies like Firebase client
}

func NewAuthService(db connection.Database) *AuthService {
	return &AuthService{
		db: db,
	}
}

// Core business logic that can be shared between gRPC and HTTP
func (s *AuthService) ValidateToken(ctx context.Context, token string) (bool, error) {
	// TODO: Implement token validation
	return false, nil
}

func (s *AuthService) CreateUser(ctx context.Context, email, password string) error {
	// TODO: Implement user creation
	return nil
}
